# BayesianThompsonSamplingOptimization

./: .gitignore  BatchThompsonSampling.py  COSMO_input.inp  COSMOinputfileGen.py  Cosmothermtest.py  FunctionOptimization.py  MaxAcquisitionFunction.py  ThompsonSampling.py  pyproject.toml
COSMOtherm/: VLE-OCTANE-ACETICACID-IEI.inp
COSMOtherm/inputfiles/: ExtractionT25.inp  VLE-OCTANE-ACETICACID-IEI.inp
COSMOtherm/outputfiles/: ExtractionT25.out  ExtractionT25.tab
ThompsonSampling/: BatchThompsonSampling.py  README.md  pyproject.toml
ThompsonSampling/src/thompsonsampling/: Arms.py  MultiFidelity_TestFunctions.py  Testfunctions.py  visualize.py
ThompsonSampling/tests/: Tester_util.py
src/thompsonsampling/: Arms.py  batchVisualize.py  util.py  visualize.py
tests/: Tester_MF1.py
